Updated notebook tutorial with tensor completion examples

--- a/notebooks/tutorial_notebook.ipynb
+++ b/notebooks/tutorial_notebook.ipynb
@@ -356,7 +356,7 @@
      "output_type": "stream",
      "text": [
       "  EPOCH 1 \n",
-      "    Train loss: 9357.021\n",
+      "    Train loss: 9357.022\n",
       "  EPOCH 2 \n",
       "    Train loss: 8719.072\n",
       "  EPOCH 3 \n",
@@ -374,16 +374,16 @@
       "  EPOCH 9 \n",
       "    Train loss: 6362.363\n",
       "  EPOCH 10 \n",
-      "    Train loss: 6102.885\n",
+      "    Train loss: 6102.886\n",
       "\n",
       "Same training process, but with validation data\n",
       "    Val. loss:  10309.398\n",
       "  EPOCH 1 \n",
-      "    Train loss: 9357.021\n",
+      "    Train loss: 9357.022\n",
       "    Val. loss:  10387.790\n",
       "  EPOCH 2 \n",
       "    Train loss: 8719.072\n",
-      "    Val. loss:  10455.533\n",
+      "    Val. loss:  10455.534\n",
       "  EPOCH 3 \n",
       "    Train loss: 8234.186\n",
       "    Val. loss:  10514.973\n",
@@ -406,16 +406,16 @@
       "    Train loss: 6362.363\n",
       "    Val. loss:  10780.555\n",
       "  EPOCH 10 \n",
-      "    Train loss: 6102.885\n",
+      "    Train loss: 6102.886\n",
       "    Val. loss:  10818.779\n",
       "\n",
       "    Val. loss:  10309.398\n",
       "  EPOCH 1 \n",
-      "    Train loss: 9357.021\n",
+      "    Train loss: 9357.022\n",
       "    Val. loss:  10387.790\n",
       "  EPOCH 2 \n",
       "    Train loss: 8719.072\n",
-      "    Val. loss:  10455.533\n",
+      "    Val. loss:  10455.534\n",
       "Early stopping condition reached\n",
       "\n",
       "Lowest validation error was 10309.398\n"
@@ -453,6 +453,124 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Tensor Completion\n",
+    "\n",
+    "For solving tensor completion, where the value of only a few tensor elements are known, we can use the same continuous optimization, but with a different loss function and target dataset format. Let's first look at the simple case when the tensor elements being learned come from a tensor network."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  EPOCH 1 \n",
+      "    Train loss: 7953.727\n",
+      "  EPOCH 2 \n",
+      "    Train loss: 7711.137\n",
+      "  EPOCH 3 \n",
+      "    Train loss: 7500.820\n",
+      "  EPOCH 4 \n",
+      "    Train loss: 7315.534\n",
+      "  EPOCH 5 \n",
+      "    Train loss: 7149.999\n",
+      "  EPOCH 6 \n",
+      "    Train loss: 7000.253\n",
+      "  EPOCH 7 \n",
+      "    Train loss: 6863.245\n",
+      "  EPOCH 8 \n",
+      "    Train loss: 6736.571\n",
+      "  EPOCH 9 \n",
+      "    Train loss: 6618.301\n",
+      "  EPOCH 10 \n",
+      "    Train loss: 6506.855\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The generate_completion_data function takes in a target TN and a dataset\n",
+    "# size, and produces a pair of random elements and associated (noisy) outputs\n",
+    "num_train = 10000\n",
+    "train_data = cc.generate_completion_data(goal_tn, num_train, noise=1e-6)\n",
+    "\n",
+    "# For completion, use cc.completion_loss\n",
+    "loss_fun = cc.completion_loss\n",
+    "_ = cc.continuous_optim(base_tn, train_data, loss_fun)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Learning a geometric series\n",
+    "\n",
+    "Let's look at an example where the learned tensor comes from preexisting data. We'll use a reshaped geometric sequence as a simple example, since it turns out such tensors are actually rank-1. Let's see what happens if we initialize a random rank-1 tensor and train it with tensor completion."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  EPOCH 1 (50 reps)\n",
+      "    Train loss: 2189.793\n",
+      "  EPOCH 2 (50 reps)\n",
+      "    Train loss: 2181.230\n",
+      "  EPOCH 3 (50 reps)\n",
+      "    Train loss: 2172.096\n",
+      "  EPOCH 4 (50 reps)\n",
+      "    Train loss: 2161.620\n",
+      "  EPOCH 5 (50 reps)\n",
+      "    Train loss: 2148.841\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define a new network trainable network\n",
+    "# for solving this problem\n",
+    "in_dim    = 10\n",
+    "num_cores = 3\n",
+    "input_dims = [in_dim] * num_cores\n",
+    "small_tn = cc.random_tn(input_dims, rank=2)\n",
+    "small_tn = cc.make_trainable(small_tn)\n",
+    "\n",
+    "# Our data is just a reshaped geometric sequence\n",
+    "num_elms = in_dim ** num_cores\n",
+    "data = 2**torch.linspace(0,10,num_elms).reshape(input_dims)\n",
+    "\n",
+    "# Let's just use a small number of elements for the\n",
+    "# training dataset\n",
+    "num_points = 50\n",
+    "train_elms = torch.randint(in_dim, (num_cores, num_points))\n",
+    "train_vals = data[list(train_elms)]\n",
+    "train_data = (train_elms, train_vals)\n",
+    "\n",
+    "# Finally, the continuous optimization\n",
+    "loss_fun = cc.completion_loss\n",
+    "_ = cc.continuous_optim(small_tn, train_data, loss_fun,\n",
+    "                        epochs=5, other_args={'reps': 50})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The loss decreases pretty slowly at first, but if you increase the number of epochs things speed up quite a bit, before eventually converging to some not-great value. Would be interesting to explore this simple test case more!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Weird Behavior in Regression\n",
     "\n",
     "Strangely, the validation error for function regression is increasing with time, which should not be happening. I played around with different target tensors, and this doesn't always occur. However, the validation loss is consistently much larger than the training loss for function regression. Some experimentation is needed here!\n",
@@ -464,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
